Fixing status and time issues

--- a/client/update-match.html
+++ b/client/update-match.html
@@ -57,7 +57,7 @@
                                 <div class="vs-badge mb-3 mx-auto d-flex align-items-center justify-content-center">
                                     <span class="h3 mb-0 text-white">VS</span>
                                 </div>
-                                <select class="form-select form-select-lg mb-3 text-center" id="status" name="status">
+                                <select class="form-select form-select-lg mb-3 text-center" id="status" name="status" disabled>
                                     <option value="not_started">Not Started</option>
                                     <option value="running">
                                         <span class="text-success">● </span>LIVE
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="col-6">
                                     <input type="number" class="form-control stat-input" id="possession_team2"
-                                        name="possession_team2" min="0" max="100">
+                                        name="possession_team2" min="0" max="100" disabled>
                                     <div class="stat-label" id="team2Name-possession"></div>
                                 </div>
                             </div>
